@@ -18,13 +18,11 @@ public class Tag {
     private String normalName; // always the lower case version of this tag, regardless of case preservation mode
     private boolean isBlock = true; // block
     private boolean formatAsBlock = true; // should be formatted as a block
-    private boolean canContainInline = true; // only pcdata if not
     private boolean empty = false; // can hold nothing; e.g. img
     private boolean selfClosing = false; // can self close (<foo />). used for unknown tags that self close, without forcing them as empty.
     private boolean preserveWhitespace = false; // for pre, textarea, script etc
     private boolean formList = false; // a control that appears in forms: input, textarea, output etc
     private boolean formSubmit = false; // a control that can be submitted in a form: input etc
-    private boolean inlineTag = false; // an inline tag
 
     private Tag(String tagName) {
         this.tagName = tagName;
@@ -123,16 +121,17 @@ public class Tag {
      * @return if this tag is an inline tag.
      */
     public boolean isInline() {
-        return inlineTag;
+        return !isBlock;
     }
 
     /**
      * Gets if this tag is a data only tag.
      *
      * @return if this tag is a data only tag
+     * @deprecated use data nodes instead
      */
     public boolean isData() {
-        return !canContainInline && !isEmpty();
+        return isBlock && !empty;
     }
 
     /**
@@ -210,15 +209,13 @@ public class Tag {
         Tag tag = (Tag) o;
 
         if (!tagName.equals(tag.tagName)) return false;
-        if (canContainInline != tag.canContainInline) return false;
         if (empty != tag.empty) return false;
         if (formatAsBlock != tag.formatAsBlock) return false;
         if (isBlock != tag.isBlock) return false;
         if (preserveWhitespace != tag.preserveWhitespace) return false;
         if (selfClosing != tag.selfClosing) return false;
         if (formList != tag.formList) return false;
-        if (formSubmit != tag.formSubmit) return false;
-        return inlineTag == tag.inlineTag;
+        return formSubmit == tag.formSubmit;
     }
 
     @Override
@@ -226,13 +223,11 @@ public class Tag {
         int result = tagName.hashCode();
         result = 31 * result + (isBlock ? 1 : 0);
         result = 31 * result + (formatAsBlock ? 1 : 0);
-        result = 31 * result + (canContainInline ? 1 : 0);
         result = 31 * result + (empty ? 1 : 0);
         result = 31 * result + (selfClosing ? 1 : 0);
         result = 31 * result + (preserveWhitespace ? 1 : 0);
         result = 31 * result + (formList ? 1 : 0);
         result = 31 * result + (formSubmit ? 1 : 0);
-        result = 31 * result + (inlineTag ? 1 : 0);
         return result;
     }
 
@@ -263,6 +258,7 @@ public class Tag {
             "meta", "link", "base", "frame", "img", "br", "wbr", "embed", "hr", "input", "keygen", "col", "command",
             "device", "area", "basefont", "bgsound", "menuitem", "param", "source", "track"
     };
+    // todo - rework this to format contents as inline; and update html emitter in Element. Same output, just neater.
     private static final String[] formatAsInlineTags = {
             "title", "a", "p", "h1", "h2", "h3", "h4", "h5", "h6", "pre", "address", "li", "th", "td", "script", "style",
             "ins", "del", "s"
@@ -289,7 +285,6 @@ public class Tag {
             Tag tag = new Tag(tagName);
             tag.isBlock = false;
             tag.formatAsBlock = false;
-            tag.inlineTag = true;
             register(tag);
         }
 
@@ -297,7 +292,6 @@ public class Tag {
         for (String tagName : emptyTags) {
             Tag tag = tags.get(tagName);
             Validate.notNull(tag);
-            tag.canContainInline = false;
             tag.empty = true;
         }
 
